--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,7 @@ deploy:
     tags: false
     repo: TwrpBuilder/device_minix_p200_2G
     branch: mm6.0
+
+branches:
+  except:
+    - /^(?i:untagged)-.*$/
